Refactoriza funciones para los get